[tool.poetry]
name = "python-transformation-libraries-benchmark"
version = "0.1.0"
description = ""
authors = ["Pieter Fiers <pieter@pfiers.net>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "python_transformation_libraries_benchmark"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
polars = "^0.18.2"
duckdb = "^0.8.0"
pyarrow = "^12.0.0"
pytest = "^7.3.2"
pytest-benchmark = "^4.0.0"
sparqlwrapper = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
